# sd-distill-prune-quant

./: .gitignore  .secrets.baseline  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  evaluate.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.ps1  run.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: security.yml
docs/: CI_LOCAL.md  README.md  pipeline.md  setup-linux.md  setup-macos.md  setup-windows.md  troubleshooting.md  usage.md
scripts/: precheck.sh  run_ci_local.py
sd_compress/: __init__.py  __main__.py  baseline.py  cli.py  config.py  distillation.py  eval_runner.py  export.py  finetune.py  lora.py  optimization.py  pipeline.py  pruning.py  quantization.py  runtime.py  server.py  utils.py
